fix bug in lya qso numbers

--- a/truth.ipynb
+++ b/truth.ipynb
@@ -30,182 +30,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def assign_lya_qso(initial_mtl_file, pixweight_file):\n",
-    "    targets = Table.read(initial_mtl_file)\n",
-    "\n",
-    "    pixweight, header = fits.getdata(pixweight_file, 'PIXWEIGHTS', header=True)\n",
-    "    hpxnside = header['HPXNSIDE']\n",
-    "\n",
-    "    theta_w, phi_w = healpy.pix2ang(hpxnside, pixweight['HPXPIXEL'], nest=True)\n",
-    "\n",
-    "\n",
-    "    hpxnside_sample = 64 # pixel area on which we will sample the lyaqso\n",
-    "    npix_sample = healpy.nside2npix(hpxnside_sample)\n",
-    "    pixnumber_sample = healpy.ang2pix(hpxnside_sample, theta_w, phi_w, nest=True)\n",
-    "\n",
-    "    subpixels = {} # store the pixels at the resolution in the input target catalog that are included within the pixels at the new resolution.\n",
-    "    for i in range(npix_sample):\n",
-    "        ii_sample = pixnumber_sample==i\n",
-    "        subpixels[i] =  healpy.ang2pix(hpxnside, theta_w[ii_sample], phi_w[ii_sample], nest=True)\n",
-    "    \n",
-    "    \n",
-    "    # redefine the covered area for the new pixels from the higher resolution FRACAREA\n",
-    "    covered_area = np.ones(npix_sample)\n",
-    "    for i in range(npix_sample):\n",
-    "        sum_weight = np.sum(pixweight['FRACAREA'][subpixels[i]])\n",
-    "        if sum_weight>0.0:\n",
-    "            covered_area[i] = np.sum(pixweight['FRACAREA'][subpixels[i]]**2)/np.sum(pixweight['FRACAREA'][subpixels[i]])\n",
-    "        else:\n",
-    "            covered_area[i] = 0.0\n",
-    "\n",
-    "    theta_s, phi_s = healpy.pix2ang(hpxnside_sample, np.arange(npix_sample), nest=True)\n",
-    "\n",
-    "    pixelarea_sample = healpy.pixelfunc.nside2pixarea(hpxnside_sample, degrees=True)\n",
-    "    n_lya_qso_in_pixel = np.int_(covered_area * 50 * pixelarea_sample)\n",
-    "\n",
-    "    # compute angular coordinates from the targets\n",
-    "    targets_phi = np.deg2rad(targets['RA'])\n",
-    "    targets_theta = np.deg2rad(90.0-targets['DEC'])\n",
-    "\n",
-    "    # find the pixnumber to which the target belongs (in the hpxnside_sample resolution)\n",
-    "    pixnumber_targets = healpy.ang2pix(hpxnside_sample, targets_theta, targets_phi, nest=True)\n",
-    "\n",
-    "    \n",
-    "    # what target are QSOs?\n",
-    "    is_qso = (targets['DESI_TARGET'] & desi_mask.QSO)!=0\n",
-    "\n",
-    "    # list of unique pixels covered by the targets\n",
-    "    pixnumber_target_list = list(set(pixnumber_targets)) # list of pixelsIDs covered by the targets in the new resolution\n",
-    "\n",
-    "    n_qso_per_pixel_targets = np.zeros(len(pixnumber_target_list))\n",
-    "    for i in range(len(pixnumber_target_list)):\n",
-    "        ii_targets = is_qso & (pixnumber_targets==pixnumber_target_list[i])\n",
-    "        n_qso_per_pixel_targets[i] = np.count_nonzero(ii_targets)\n",
-    "    \n",
-    "    n_lya_desired_pixel_targets = np.random.poisson(n_lya_qso_in_pixel[pixnumber_target_list])\n",
-    "\n",
-    "    # Generate the boolean array to determine whether a target is a lyaqso or not\n",
-    "    is_lya_qso = np.repeat(False, len(targets))\n",
-    "    n_targets = len(targets)\n",
-    "    target_ids = np.arange(n_targets)\n",
-    "\n",
-    "    for i in range(len(pixnumber_target_list)):\n",
-    "        ii_targets = is_qso & (pixnumber_targets==pixnumber_target_list[i])\n",
-    "        n_qso_in_pixel = np.count_nonzero(ii_targets)\n",
-    "        n_lya_desired = np.random.poisson(n_qso_in_pixel)\n",
-    "        if n_lya_desired >= n_qso_in_pixel:\n",
-    "            is_lya_qso[ii_targets] = True\n",
-    "        else:\n",
-    "            #print(len(target_ids[ii_targets]), n_lya_desired)\n",
-    "            ii_lya_qso = np.random.choice(target_ids[ii_targets], n_lya_desired, replace=False)\n",
-    "            is_lya_qso[ii_lya_qso] = True\n",
-    "    return is_lya_qso"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "initial_Ztl_file = \"targets/subset_dr8_mtl_dark_gray_NGC.fits\"\n",
+    "initial_mtl_file = \"targets/subset_dr8_mtl_dark_gray_NGC.fits\"\n",
     "pixweight_file = \"/project/projectdirs/desi/target/catalogs/dr8/0.31.1/pixweight/pixweight-dr8-0.31.1.fits\"\n",
-    "is_lya_qso = assign_lya_qso(initial_mtl_file, pixweight_file)"
+    "initial_truth_file = \"targets/subset_truth_dr8_mtl_dark_gray_NGC.fits\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_truth_file = \"targets/subset_truth_dr8_mtl_dark_gray_NGC.fits\"\n",
-    "if not os.path.exists(initial_truth_file):\n",
-    "    import desitarget.mock.mockmaker as mb\n",
-    "    from desitarget.targetmask import desi_mask, bgs_mask, mws_mask\n",
-    "\n",
-    "    targets = Table.read(initial_mtl_file)\n",
-    "    colnames = list(targets.dtype.names)\n",
-    "    print(colnames)\n",
-    "    nobj = len(targets)\n",
-    "    truth = mb.empty_truth_table(nobj=nobj)[0]\n",
-    "    print(truth.keys())\n",
-    "\n",
-    "    for k in colnames:\n",
-    "        if k in truth.keys():\n",
-    "            print(k)\n",
-    "            truth[k][:] = targets[k][:]\n",
-    "\n",
-    "    nothing = '          '\n",
-    "    truth['TEMPLATESUBTYPE'] = np.repeat(nothing, nobj)\n",
-    "\n",
-    "    masks = ['MWS_ANY', 'BGS_ANY', 'STD_FAINT', 'STD_BRIGHT','ELG', 'LRG', 'QSO', ]\n",
-    "    dict_truespectype = {'BGS_ANY':'GALAXY', 'ELG':'GALAXY', 'LRG':'GALAXY', 'QSO':'QSO', \n",
-    "                    'MWS_ANY':'STAR', 'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR'}\n",
-    "    dict_truetemplatetype = {'BGS_ANY':'BGS', 'ELG':'ELG', 'LRG':'LRG', 'QSO':'QSO', \n",
-    "                        'MWS_ANY':'STAR', 'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR'}\n",
-    "    dict_truez = {'BGS_ANY':0.2, 'ELG':1.5, 'LRG':0.7, 'QSO':2.0, \n",
-    "                        'MWS_ANY':0.0, 'STD_FAINT':0.0, 'STD_BRIGHT':0.0}\n",
-    "\n",
-    "    for m in masks:\n",
-    "        istype = (targets['DESI_TARGET'] & desi_mask.mask(m))!=0\n",
-    "        print(m, np.count_nonzero(istype))\n",
-    "        truth['TRUESPECTYPE'][istype] = np.repeat(dict_truespectype[m], np.count_nonzero(istype))\n",
-    "        truth['TEMPLATETYPE'][istype] = np.repeat(dict_truetemplatetype[m], np.count_nonzero(istype))\n",
-    "        truth['MOCKID'][istype] = targets['TARGETID'][istype]\n",
-    "        truth['TRUEZ'][istype] = dict_truez[m]\n",
-    "\n",
-    "        \n",
-    "    truth['TRUEZ'][is_lya_qso] = 3.0\n",
-    "    # Check that all targets have been assigned to a class\n",
-    "    iii = truth['MOCKID']==0\n",
-    "    assert np.count_nonzero(iii)==0\n",
-    "    \n",
-    "    print('writing truth')\n",
-    "    truth.write(initial_truth_file, overwrite=True)\n",
-    "    print('done truth')"
+    "truth = Table.read(initial_truth_file)\n",
+    "initial_mtl = Table.read(initial_mtl_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "truth = Table.read(initial_truth_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ii = (truth['TRUEZ']>2.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "&lt;Table length=10&gt;\n",
+       "<table id=\"table46913644072128\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>TARGETID</th><th>MOCKID</th><th>TRUEZ</th><th>TRUESPECTYPE</th><th>TEMPLATETYPE</th><th>TEMPLATESUBTYPE</th><th>TEMPLATEID</th><th>SEED</th><th>MAG</th><th>MAGFILTER</th><th>FLUX_G</th><th>FLUX_R</th><th>FLUX_Z</th><th>FLUX_W1</th><th>FLUX_W2</th><th>FLUX_W3</th><th>FLUX_W4</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th><th></th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>int64</th><th>float32</th><th>str10</th><th>str10</th><th>str10</th><th>int32</th><th>int64</th><th>float32</th><th>str15</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
+       "<tr><td>35185748411940893</td><td>35185748411940893</td><td>0.2</td><td>GALAXY</td><td>BGS</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940915</td><td>35185748411940915</td><td>0.0</td><td>STAR</td><td>STAR</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940916</td><td>35185748411940916</td><td>0.0</td><td>STAR</td><td>STAR</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940925</td><td>35185748411940925</td><td>0.0</td><td>STAR</td><td>STAR</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940927</td><td>35185748411940927</td><td>1.5</td><td>GALAXY</td><td>ELG</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940947</td><td>35185748411940947</td><td>1.5</td><td>GALAXY</td><td>ELG</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940954</td><td>35185748411940954</td><td>1.5</td><td>GALAXY</td><td>ELG</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940960</td><td>35185748411940960</td><td>1.5</td><td>GALAXY</td><td>ELG</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940961</td><td>35185748411940961</td><td>1.5</td><td>GALAXY</td><td>ELG</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>35185748411940971</td><td>35185748411940971</td><td>0.0</td><td>STAR</td><td>STAR</td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "</table>"
+      ],
       "text/plain": [
-       "{'QSO'}"
+       "<Table length=10>\n",
+       "     TARGETID           MOCKID       TRUEZ  ...   FLUX_W3     FLUX_W4  \n",
+       "                                            ... nanomaggies nanomaggies\n",
+       "      int64             int64       float32 ...   float32     float32  \n",
+       "----------------- ----------------- ------- ... ----------- -----------\n",
+       "35185748411940893 35185748411940893     0.2 ...         0.0         0.0\n",
+       "35185748411940915 35185748411940915     0.0 ...         0.0         0.0\n",
+       "35185748411940916 35185748411940916     0.0 ...         0.0         0.0\n",
+       "35185748411940925 35185748411940925     0.0 ...         0.0         0.0\n",
+       "35185748411940927 35185748411940927     1.5 ...         0.0         0.0\n",
+       "35185748411940947 35185748411940947     1.5 ...         0.0         0.0\n",
+       "35185748411940954 35185748411940954     1.5 ...         0.0         0.0\n",
+       "35185748411940960 35185748411940960     1.5 ...         0.0         0.0\n",
+       "35185748411940961 35185748411940961     1.5 ...         0.0         0.0\n",
+       "35185748411940971 35185748411940971     0.0 ...         0.0         0.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set(truth['TEMPLATETYPE'][ii])"
+    "truth[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=10&gt;\n",
+       "<table id=\"table46913644440824\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>RA</th><th>DEC</th><th>TARGETID</th><th>DESI_TARGET</th><th>BGS_TARGET</th><th>MWS_TARGET</th><th>PRIORITY_INIT</th><th>SUBPRIORITY</th><th>NUMOBS_INIT</th><th>HPXPIXEL</th><th>NUMOBS_MORE</th><th>PRIORITY</th><th>OBSCONDITIONS</th></tr></thead>\n",
+       "<thead><tr><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int32</th></tr></thead>\n",
+       "<tr><td>163.252082455</td><td>-0.624211104073</td><td>35185748411940893</td><td>1152921504606846976</td><td>65537</td><td>0</td><td>2000</td><td>0.751984172406</td><td>1</td><td>27023</td><td>0</td><td>0</td><td>7</td></tr>\n",
+       "<tr><td>163.413737215</td><td>-0.622343341717</td><td>35185748411940915</td><td>2305843009213693952</td><td>0</td><td>10240</td><td>1500</td><td>0.679526087745</td><td>1</td><td>27023</td><td>1</td><td>1500</td><td>7</td></tr>\n",
+       "<tr><td>163.414541574</td><td>-0.622295995581</td><td>35185748411940916</td><td>2305843009213693952</td><td>0</td><td>10240</td><td>1500</td><td>0.374817713069</td><td>1</td><td>27023</td><td>1</td><td>1500</td><td>7</td></tr>\n",
+       "<tr><td>163.277324683</td><td>-0.621896373342</td><td>35185748411940925</td><td>2305843009213693952</td><td>0</td><td>1280</td><td>1500</td><td>0.491139885087</td><td>1</td><td>27023</td><td>1</td><td>1500</td><td>7</td></tr>\n",
+       "<tr><td>163.473522103</td><td>-0.622380001889</td><td>35185748411940927</td><td>131074</td><td>0</td><td>0</td><td>3000</td><td>0.853900531068</td><td>1</td><td>27023</td><td>1</td><td>3000</td><td>3</td></tr>\n",
+       "<tr><td>163.495674904</td><td>-0.621547358804</td><td>35185748411940947</td><td>131074</td><td>0</td><td>0</td><td>3000</td><td>0.978607452713</td><td>1</td><td>27023</td><td>1</td><td>3000</td><td>3</td></tr>\n",
+       "<tr><td>163.324883091</td><td>-0.620610593885</td><td>35185748411940954</td><td>131074</td><td>0</td><td>0</td><td>3000</td><td>0.87926552397</td><td>1</td><td>27023</td><td>1</td><td>3000</td><td>3</td></tr>\n",
+       "<tr><td>163.407663822</td><td>-0.620698404077</td><td>35185748411940960</td><td>131074</td><td>0</td><td>0</td><td>3000</td><td>0.653314844572</td><td>1</td><td>27023</td><td>1</td><td>3000</td><td>3</td></tr>\n",
+       "<tr><td>163.406836857</td><td>-0.621139978782</td><td>35185748411940961</td><td>131074</td><td>0</td><td>0</td><td>3000</td><td>0.694506552792</td><td>1</td><td>27023</td><td>1</td><td>3000</td><td>3</td></tr>\n",
+       "<tr><td>163.396006735</td><td>-0.619698525693</td><td>35185748411940971</td><td>2305843009213693952</td><td>0</td><td>1280</td><td>1500</td><td>0.404622822412</td><td>1</td><td>27023</td><td>1</td><td>1500</td><td>7</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=10>\n",
+       "      RA            DEC            TARGETID     ... PRIORITY OBSCONDITIONS\n",
+       "   float64        float64           int64       ...  int64       int32    \n",
+       "------------- --------------- ----------------- ... -------- -------------\n",
+       "163.252082455 -0.624211104073 35185748411940893 ...        0             7\n",
+       "163.413737215 -0.622343341717 35185748411940915 ...     1500             7\n",
+       "163.414541574 -0.622295995581 35185748411940916 ...     1500             7\n",
+       "163.277324683 -0.621896373342 35185748411940925 ...     1500             7\n",
+       "163.473522103 -0.622380001889 35185748411940927 ...     3000             3\n",
+       "163.495674904 -0.621547358804 35185748411940947 ...     3000             3\n",
+       "163.324883091 -0.620610593885 35185748411940954 ...     3000             3\n",
+       "163.407663822 -0.620698404077 35185748411940960 ...     3000             3\n",
+       "163.406836857 -0.621139978782 35185748411940961 ...     3000             3\n",
+       "163.396006735 -0.619698525693 35185748411940971 ...     1500             7"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "initial_mtl[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45692 201221\n"
+     ]
+    }
+   ],
+   "source": [
+    "ii_truth_qso = truth['TRUESPECTYPE']=='QSO'\n",
+    "high_z_qso = truth['TRUEZ'] > 2.15\n",
+    "print(np.count_nonzero(ii_truth_qso & high_z_qso), np.count_nonzero(ii_truth_qso & ~high_z_qso))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area_approx = (initial_mtl['RA'].max() - initial_mtl['RA'].min()) * (initial_mtl['DEC'].max() - initial_mtl['DEC'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44999.958658\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(area_approx * 50)"
    ]
   },
   {
