--- a/new_mtl_quickcat.ipynb
+++ b/new_mtl_quickcat.ipynb
@@ -330,6 +330,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'K'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Return an array copy of the given object.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "a : array_like\n",
+       "    Input data.\n",
+       "order : {'C', 'F', 'A', 'K'}, optional\n",
+       "    Controls the memory layout of the copy. 'C' means C-order,\n",
+       "    'F' means F-order, 'A' means 'F' if `a` is Fortran contiguous,\n",
+       "    'C' otherwise. 'K' means match the layout of `a` as closely\n",
+       "    as possible. (Note that this function and :meth:`ndarray.copy` are very\n",
+       "    similar, but have different default values for their order=\n",
+       "    arguments.)\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "arr : ndarray\n",
+       "    Array interpretation of `a`.\n",
+       "\n",
+       "Notes\n",
+       "-----\n",
+       "This is equivalent to:\n",
+       "\n",
+       ">>> np.array(a, copy=True)  #doctest: +SKIP\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       "Create an array x, with a reference y and a copy z:\n",
+       "\n",
+       ">>> x = np.array([1, 2, 3])\n",
+       ">>> y = x\n",
+       ">>> z = np.copy(x)\n",
+       "\n",
+       "Note that, when we modify x, y changes, but not z:\n",
+       "\n",
+       ">>> x[0] = 10\n",
+       ">>> x[0] == y[0]\n",
+       "True\n",
+       ">>> x[0] == z[0]\n",
+       "False\n",
+       "\u001b[0;31mFile:\u001b[0m      /global/common/software/desi/cori/desiconda/20180709-1.2.6-spec/conda/lib/python3.6/site-packages/numpy/lib/function_base.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.copy?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
