--- a/nb/explore-dr9.ipynb
+++ b/nb/explore-dr9.ipynb
@@ -303,28 +303,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "['BGS_FAINT', 'BGS_FAINT_NORTH']\n",
-      "['BGS_BRIGHT', 'BGS_BRIGHT_NORTH']\n",
-      "['BGS_BRIGHT', 'BGS_BRIGHT_SOUTH']\n",
-      "['BGS_WISE', 'BGS_WISE_NORTH']\n",
-      "['BGS_FAINT', 'BGS_FAINT_SOUTH']\n",
-      "['BGS_WISE', 'BGS_WISE_SOUTH']\n",
-      "['BGS_FAINT', 'BGS_FAINT_HIP', 'BGS_FAINT_NORTH']\n",
-      "['BGS_FAINT', 'BGS_FAINT_HIP', 'BGS_FAINT_SOUTH']\n"
+      "0 []\n",
+      "257 ['BGS_FAINT', 'BGS_FAINT_NORTH']\n",
+      "514 ['BGS_BRIGHT', 'BGS_BRIGHT_NORTH']\n",
+      "131074 ['BGS_BRIGHT', 'BGS_BRIGHT_SOUTH']\n",
+      "1028 ['BGS_WISE', 'BGS_WISE_NORTH']\n",
+      "65537 ['BGS_FAINT', 'BGS_FAINT_SOUTH']\n",
+      "262148 ['BGS_WISE', 'BGS_WISE_SOUTH']\n",
+      "265 ['BGS_FAINT', 'BGS_FAINT_HIP', 'BGS_FAINT_NORTH']\n",
+      "65545 ['BGS_FAINT', 'BGS_FAINT_HIP', 'BGS_FAINT_SOUTH']\n"
      ]
     }
    ],
    "source": [
     "for mask in mask_values:\n",
-    "    print(bgs_mask.names(mask))"
+    "    print(mask, bgs_mask.names(mask))"
    ]
   },
   {
